--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "goit-react-hw-03-image-finder",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://maxakozin.github.io/goit-react-hw-03-image-finder",
+  "homepage": " ",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
@@ -42,11 +42,11 @@
   "devDependencies": {},
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/MaxaKozin/goit-react-hw-03-image-finder.git"
+    "url": "git+https://github.com/ludmiladev/goit-react-hw-03-image-finder.git"
   },
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/MaxaKozin/goit-react-hw-03-image-finder/issues"
+    "url": "https://github.com/ludmiladev/goit-react-hw-03-image-finder"
   }
 }
